# bento

./: .dockerignore  .env.production.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_tables.py
backend/: config.py  main.py
backend/api/routes/: jobs.py  locations.py  matrices.py  modules.py  onboard.py  profiles.py  resources.py  solve.py  tenants.py  vehicles.py
backend/db/: __init__.py  models.py  seed.py  session.py
backend/schemas/: job.py  location.py  onboard.py  profile.py  resource.py  solve.py  tenant.py  vehicle.py
backend/solver/: assembler.py  base_model.py  exceptions.py  module.py  orchestrator.py  result_extractor.py
backend/solver/modules/: __init__.py  co_delivery.py  ev_fuel.py  priority_sla.py  shift_limits.py  time_windows.py
deploy/: Caddyfile.example  README.md  bento-api.service
frontend/: .env.production.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  matrices.ts
frontend/src/components/: DetailPanel.tsx  ProtectedRoute.tsx  RouteMap.tsx  TourTooltip.tsx  link.tsx  sidebar-layout.tsx
frontend/src/config/: branding.ts  tour-steps.ts
scripts/: db.sh  entrypoint.sh  reseed.sh
tests/: test_schemas.py
tests/api/: test_matrices.py  test_modules_endpoint.py  test_solve.py
tests/regression/: baselines.json  conftest.py  test_scenarios.py
tests/solver/: conftest.py  test_base_model.py  test_orchestrator.py
(+19 files in other folders)
